# minimax-cli-with-gen-skills

./: README.md  install.sh  pyproject.toml
.claude/skills/minimax/: SKILL.md
.claude/skills/minimax/reference/: image.md  music.md  speech.md  video.md
src/: minimax_cli.py
src/minimax/: __init__.py
src/minimax/api/: __init__.py  client.py
src/minimax/image/: __init__.py  client.py
src/minimax/mcp/: __init__.py
src/minimax/speech/: __init__.py  client.py
src/minimax/video/: __init__.py  client.py
